--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,111 +1,108 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
-@import '/node_modules/normalize.css/normalize.css';
-
 
 /* ADMIN */
 
 * {
-    font-family: "Manrope", "sans-serif";
-    padding: 0;
-    margin: 0;
+  font-family: "Manrope", "sans-serif";
+  padding: 0;
+  margin: 0;
 }
 
 .branchHeader-container {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
 }
 
 .branchHeader-container .left-header {
-    display: flex;
-    font-size: 25px;
-    align-items: center;
-    font-weight: 700;
+  display: flex;
+  font-size: 25px;
+  align-items: center;
+  font-weight: 700;
 }
 
 .branchHeader-container .right-header {
-    grid-column: 10;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  grid-column: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .branchHeader-container .center-header {
-    display: flex;
-    grid-column: 5;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    font-weight: 900;
-    color: #4660E7;
+  display: flex;
+  grid-column: 5;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: 900;
+  color: #4660e7;
 }
 
 .branchHeader-container .right-header .small-info {
-    display: flex;
-    border: 0px solid;
-    padding: 5px 10px;
-    border-radius: 20px;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-
+  display: flex;
+  border: 0px solid;
+  padding: 5px 10px;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
 .branchHeader-container .right-header .small-info ul {
-    list-style: none;
+  list-style: none;
 }
 
 .branchHeader-container .right-header .small-info ul li:first-child {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .branchCreate-container {
-    padding: 0.5rem;
+  padding: 0.5rem;
 }
 
 .branchCreate-container .box-body {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding-bottom: 2rem;
-    padding-left: 1rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-bottom: 2rem;
+  padding-left: 1rem;
 }
 
 .branchCreate-container .box-body .branch-address {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .branchCreate-container .box-body .branch-mail {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .branchCreate-container .box-body .branch-mobile {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .create-screen h3 {
-    width: 200px;
-    text-align: right;
+  width: 200px;
+  text-align: right;
 }
 
 .branchCreate-container h3 {
-    width: 200px;
-    text-align: right;
+  width: 200px;
+  text-align: right;
 }
 
 @media (max-width: 1100px) {
-    .branchCreate-container .box-body {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        padding-bottom: 2rem;
-        padding-left: 1rem;
-    }
+  .branchCreate-container .box-body {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding-bottom: 2rem;
+    padding-left: 1rem;
+  }
 
-    .branchCreate-container .box-body .box .my-text-field {
-        display: inline-flex;
-        width: 500px;
-    }
+  .branchCreate-container .box-body .box .my-text-field {
+    display: inline-flex;
+    width: 500px;
+  }
 }
 
 /* ADMIN */
