--- a/src/components/CKEditor/Styles/style.css
+++ b/src/components/CKEditor/Styles/style.css
@@ -8,7 +8,6 @@
 
 .main-container-CKEditor {
     font-family: 'Lato';
-    width: fit-content;
     margin-left: auto;
     margin-right: auto;
 }
@@ -49,21 +48,22 @@
     min-height: var(--ckeditor5-preview-height);
     overflow-y: scroll;
     background: var(--ck-color-base-foreground);
+    width: 100%;
 }
 
 .editor-container_document-editor .editor-container__editor {
     margin-top: 28px;
     margin-bottom: 28px;
     height: 100%;
+    width: 100%;
 }
 
 .editor-container_document-editor .editor-container__editor .ck.ck-editor__editable {
     box-sizing: border-box;
-    min-width: calc(210mm + 2px);
-    max-width: calc(210mm + 2px);
+    max-width: 100%;
     min-height: 100mm;
     height: fit-content;
-    padding: 20mm 12mm;
+    padding: 10mm 12mm;
     border: 1px hsl(0, 0%, 82.7%) solid;
     background: hsl(0, 0%, 100%);
     box-shadow: 0 2px 3px hsla(0, 0%, 0%, 0.078);
